# test_your_type

./: CMakeLists.txt  t.txt
cmake/: addres_sanitizer.cmake
src/: incremental_string_comparer.cpp  main.cpp  mainwindow.cpp  text_load.cpp  typo_checker.cpp  utils.cpp
src/include/: incremental_string_comparer.hpp  mainwindow.hpp  mainwindow.ui  text_load.hpp  typo_checker.hpp  utils.hpp
tests/: CMakeLists.txt  IncrementalStringComparer_tests.cpp  tests.cpp
